@@ -80,7 +80,7 @@ namespace mesmer
         cerr << "activation energy should not be negative when used with ILT" << endl;
         return false;
       }
-      ReadRdoubleRange(string(pReact->getName()+":EInf"), ppPreExponential, m_EInf,
+      ReadRdoubleRange(string(pReact->getName()+":EInf"), ppActEne, m_EInf,
         rangeSet, getConvertedEnergy(unitsInput, 1.0)) ;  
       m_EInf = value ;
       if (rangeSet) {
